--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,6 @@ img {
 
 #characteristics {
     text-align: center;
-    border: 1px solid pink;
-    color: pink;
-    
+    border: 1px solid hotpink;
+    color: hotpink;
 }
