--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,34 @@
-body {
-    background-color: aquamarine;
+ul {  
+        list-style-type: none;
+      }
+
+li {
+    padding-top: 15px;
+}
+
+button {
+    margin-top: 10px;
+}
+
+#signin {
+    font-size: small;
+    float: right;
+}
+
+#navbar {   
+    padding: 1px 80px;
+    margin: auto;
+}
+
+#body {
+    background-image: url(pexels-samforson-154246.jpg);
+    background-position: center;
+    background-size: cover;
+    height: 700px;
+}
+
+h1 {
+    padding-top: 350px;
+    text-align: center;
+    color: white;
 }
