--- a/Week2/day4/products.css
+++ b/Week2/day4/products.css
@@ -21,6 +21,7 @@ ul {
   #products a {
     text-decoration: none;
     color: white;
+    text-transform: uppercase;
   }
 
     a:visited {
@@ -29,4 +30,15 @@ ul {
 
   a:active {
         color: white;
+  }
+
+  .footer {
+    position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color: black;
+   color: white;
+   text-align: center;
+   word-spacing: 50px;
   }
