--- a/Week2/day4/products.css
+++ b/Week2/day4/products.css
@@ -69,3 +69,24 @@ ul {
     color: grey;
     font-size: small;
   }
+
+  #discount {
+    word-spacing: 300px;
+    font-weight: bold;
+    color: white;
+    font-size: medium;
+  }
+
+  .discount1 {
+    height: 50px;
+    width: 50px;
+    background-color: green;
+    border-radius: 50%;
+  }
+
+  .discount2 {
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    background-color: red;
+  }
