--- a/Week2/day4/products.css
+++ b/Week2/day4/products.css
@@ -55,6 +55,7 @@ ul {
 
 
   .pic {
+    position: relative;
     text-align: center;
   }
 
@@ -71,6 +72,7 @@ ul {
   }
 
   #discount {
+    position: absolute;
     word-spacing: 300px;
     font-weight: bold;
     color: white;
