--- a/Week2/day4/products.css
+++ b/Week2/day4/products.css
@@ -83,20 +83,24 @@ ul {
     left: 10px;
   }
 
+  #discount > p {
+    padding-top: 10px;
+  }
+
   .discountsolo {
     padding-left: 50px;
   }
 
   .discount1 {
-    border-radius: 50%;
+    border-radius: 100%;
     width: 50px;
-    height: 50px;
+    height: 32px;
     background-color: green;
   }
 
   .discount2 {
-    border-radius: 50%;
+    border-radius: 100%;
     width: 50px;
-    height: 50px;
+    height: 32px;
     background-color: red;
   }
