--- a/Week1/day2/landing.css
+++ b/Week1/day2/landing.css
@@ -27,6 +27,19 @@ button {
     height: 700px;
 }
 
+form {
+    text-align: center;
+    font-size: medium;
+}
+
+#submit {
+    margin: 50px 0;
+    border-radius: 3px;
+    border: 1px solid rgb(55, 169, 235);
+    color: white;
+    background-color: rgb(55, 169, 235);
+}
+
 h1 {
     padding-top: 200px;
     text-align: center;
