--- a/Project/Konecte/konecte.css
+++ b/Project/Konecte/konecte.css
@@ -1,6 +1,13 @@
 body {
     background-color: #FFFFFF;
+    font-family: 'Inter';
 }
+
+footer {
+     background-color: rgba(144, 163, 163, 1);
+}
+
+/* navbar */
 
 .navbar-brand {
     width: 130px;
@@ -9,7 +16,8 @@ body {
 }
 
 .navbar {
-    background-color: rgba(194, 245, 243, 0.5);
+    word-spacing: -1px;
+    background-color: rgba(144, 163, 163, 0.2);
     color: #2A2D34;
 }
 
@@ -17,3 +25,26 @@ body {
     padding: 0 10px;
     font-weight: 450;
 }  
+
+.btn {
+    background-color: #149CA6;
+    color: #FFFFFF;
+}
+
+.btn:hover {
+    background-color: rgba(19, 218, 218, 0.418);
+    color: #FFFFFF;
+}
+
+/* sign in */
+
+.signin {
+    font-size: large;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    margin: 150px auto;
+    padding: 80px 70px;
+    text-align: center;
+
+}
