--- a/Project/Konecte/src/css/konecte.css
+++ b/Project/Konecte/src/css/konecte.css
@@ -680,7 +680,7 @@ body {
     margin-bottom: 25px;
 }
 
-.section-title {
+.booking-section-title {
     font-size: 1.1rem;
     font-weight: 600;
     margin-bottom: 15px;
